8055236: Deadlock during NMT2 shutdown on Windows

Removed MemTracker::shutdown() call to avoid deadlock

Reviewed-by: minqi, ctornqvi